--- a/app/views/refinery/calendar/events/_event.html.erb
+++ b/app/views/refinery/calendar/events/_event.html.erb
@@ -2,7 +2,7 @@
   <time class="date" datetime="<%= event.from %>">
     <%= event.from.strftime('%b %d').html_safe %>
   </time>
-
   <h1><%= link_to event.title, refinery.calendar_event_path(event) %></h1>
   <p><%= event.excerpt %></p>
+  <%= image_tag event.image.thumbnail("200x200#c").url %>
 <% end -%>
